# virushack_sokol

./: README.md
bot/: .gitignore  Cargo.toml  README.md
bot/src/: main.rs
frontend/virushack/: package.json
frontend/virushack/src/: App.js
sokol_js/: .env  index.js  package-lock.json  package.json  user_audio
