[package]
name = "sokol_bot"
version = "0.1.0"
authors = ["Mikhail Kalugin <mike_kalagan@gmail.com>"]
edition = "2018"

[dependencies]
env_logger = "~0.6"
log = "~0.4"
avro-rs = "0.6"
failure = "0.1.5"
serde = { version = "1.0", features = ["derive"] }
futures = "0.1.23"
pulsar = "0.3.0"
tokio = "0.1.11"

[dependencies.serenity]
features = ["client", "standard_framework", "voice", "rustls_backend"]
version = "0.8"
